--- a/src/css/theme.css
+++ b/src/css/theme.css
@@ -23,7 +23,7 @@
 	--breakpoint-xxs: 300px;
 	--breakpoint-xs: 492px;
 	--breakpoint-sm: 576px;
-	--breakpoint-md: 728px;
+	--breakpoint-md: 768px;
 	--breakpoint-lg: 992px;
 	--breakpoint-xl: 1280px;
 	--breakpoint-2xl: 1536px;
